Use object-position: top to ensure images are not decapitated on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,6 +318,11 @@ h1, h2 {
     flex-direction: column;
   }
 
+  /* Make more space for the timeline title */ 
+  .flex-display p {
+    margin-top: 4em;
+  }
+
   /* Images */
 
   /* Revert CSS style */
@@ -327,9 +332,11 @@ h1, h2 {
   }
 
   /* Use the full width of the screen for mobiles */
+  /* Also ensure that you display images from the 'top' so that images are not decapitated! */
   .image-container img {
     max-width: 100%;
     max-height: 300px;
+    object-position: top;
   }
 
 }
